# automaton

rust/: Cargo.toml
rust/src/: lib.rs  main.rs  types.rs
rust/src/agent/: context.rs  injection_defense.rs  loop_.rs  mod.rs  system_prompt.rs
rust/src/config/: mod.rs  schema.rs
rust/src/conway/: client.rs  credits.rs  inference.rs  mod.rs  x402.rs
rust/src/git_ops/: mod.rs
rust/src/heartbeat/: daemon.rs  mod.rs  tasks.rs
rust/src/identity/: mod.rs  provision.rs  wallet.rs
rust/src/registry/: erc8004.rs  mod.rs
rust/src/replication/: mod.rs  spawn.rs
rust/src/self_mod/: audit_log.rs  code.rs  mod.rs  tools_manager.rs  upstream.rs
rust/src/setup/: mod.rs  wizard.rs
rust/src/skills/: loader.rs  mod.rs
rust/src/social/: client.rs  mod.rs
rust/src/state/: database.rs  schema.rs
rust/src/survival/: mod.rs  monitor.rs
rust/src/tools/: mod.rs  traits.rs
